--- a/curriculum-1.29/b.application-deployment/1.replicaset.md
+++ b/curriculum-1.29/b.application-deployment/1.replicaset.md
@@ -2,3 +2,22 @@
 docs: https://kubernetes.io/docs/concepts/workloads/controllers/replicaset/
 ---
 # ReplicaSet
+
+ReplicaSet 의 목적은 항상 동일한 숫자의 replica Pods 를 유지하는 것입니다.
+
+## How a ReplicaSet works
+
+ReplicaSet 은 아래 필드와 함께 정의 됩니다.
+
+- 획득할 수 있는 Pods 를 구별하기 위한 selector
+- `replicas` : 유지하고자 하는 Pods 수
+- `podTemplate`
+
+ReplicaSet 은 Pods 의 `metadata.ownerRefereces` 필드로 연결됩니다. ReplicaSet 을 통해 얻어진 Pods 는 ReplicaSet 에 대해 ownerReferences 필드를 가집니다. 이 연결을 통해 ReplicaSet 은 자신이 관리하는 Pod 의 상태를 알고 그에 따라 계획을 세웁니다.
+
+ReplicaSet 은 selector 를 통해 새롭게 획득해야 하는 Pods 를 식별합니다. OwnerReference 가 없거나 OwnerReference 가 Controller 가 아니며 Replica 의 selector 에 매칭되는 경우, 그 파드는 즉시 ReplicaSet 에 획득됩니다.
+
+## ReplicaSet
+
+ReplicaSet 은 특정한 숫자의 pod replicas 가 주어진 어떤 시간에도 실행중임을 보장합니다. 반면 Deployment 는 더 높은 레벨에서 ReplicaSets 를 관리하고 Pods 에 대한 명시적인 업데이트 및 다양한 기능을 제공합니다. 따라서, replicas pods 에 대한 custum update orchestration 이 필요하거나 모두 동시에 업데이트 하지 않고자 하는 상황이 아니라면, 직접 ReplicaSets 를 이용하는 대신 Deployments 를 이용하는 것을 추천합니다.
+
